--- a/requestaccess.html
+++ b/requestaccess.html
@@ -207,7 +207,7 @@
 
       feedback.innerHTML = '';
 
-      emailjs.send('service_darbphr', 'template_7agjdqb', templateParams)
+      emailjs.send('service_darbphr', 'template_ms6hsbr', templateParams)
         .then(function () {
           feedback.innerHTML = '<div class="success">You are on the waiting list and will be notified as soon as possible.</div>';
           document.getElementById('accessForm').reset();
