--- a/requestaccess.html
+++ b/requestaccess.html
@@ -13,11 +13,13 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+      color: #0d0d0d;
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      line-height: 1.6;
+      max-width: 100vw;
+      overflow-x: hidden;
     }
 
     header {
