--- a/requestaccess.html
+++ b/requestaccess.html
@@ -6,6 +6,31 @@
   <title>Request Access</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
+
+    @font-face {
+      font-family: 'HeadlineFont';
+      src: url('fonts/Bezmiar-Regular.otf') format('opentype');
+      font-weight: 700;
+    }
+
+    @font-face {
+      font-family: 'MainFont1';
+      src: url('fonts/Mavoble.ttf') format('truetype');
+      font-weight: 400;
+    }
+
+    @font-face {
+      font-family: 'GoofyFont';
+      src: url('fonts/Iceland-Regular.ttf') format('truetype');
+      font-weight: 400;
+    }
+
+    @font-face {
+      font-family: 'MainFont';
+      src: url('fonts/Relevance-trial-Regular.ttf') format('truetype');
+      font-weight: 400;
+    }
+    
     * {
       margin: 0;
       padding: 0;
