--- a/requestaccess.html
+++ b/requestaccess.html
@@ -261,9 +261,17 @@
 </head>
 <body>
 
-  <header>
-    <!-- Logo oder Navigation -->
-    <strong>BEYONDTHECOVER</strong>
+  <header id="header">
+    <nav>
+      <img src="images/logos/SimplifiedLogo.png" class="logo mobile" />
+      <img src="images/logos/MainLogo.png" class="logo desktop" />
+      <ul class="nav-links">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="index.html#products">Products</a></li>
+        <li><a href="downloads.html#downloads">Downloads</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section class="hero">
