--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             max-width: 100vw;
             overflow-x: hidden;
             padding-top: env(safe-area-inset-top);
+            background-color: #0a0a0a;
         }
 
         .container {
