--- a/requestaccess.html
+++ b/requestaccess.html
@@ -177,12 +177,12 @@
     }
 
     .form-section {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      max-width: 400px;
-      width: 100%;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+      padding: 100px 0;
+      margin: 80px 0;
+      border-radius: 30px;
+      position: relative;
+      overflow: hidden;
     }
 
     .form-section h2 {
