--- a/about.html
+++ b/about.html
@@ -548,7 +548,7 @@
         <section class="hero" id="home">
             <div class="container">
                 <h1>Breaking the illusion,<br>building your truth!</h1>
-                <p>The osjdckjewfbhclie.</p>
+                <p>About us</p>
             </div>
         </section>
 
