--- a/contact.html
+++ b/contact.html
@@ -347,20 +347,29 @@
             }
 
             @media (min-width: 768px) {
-                /* Stelle sicher, dass html und body volle Höhe einnehmen */
+                /* 1. Volle Höhe für html & body sicherstellen */
                 html, body {
                     height: 100%;
+                    /* das hier überschreibt dein min-height:100vh oben */
+                    min-height: 100%;
                 }
 
-                /* Body als Flex-Container anlegen */
+                /* 2. Body zum Flex-Container machen */
                 body {
                     display: flex;
                     flex-direction: column;
                 }
 
-                /* Main-Bereich füllt den verbleibenden Raum zwischen Header und Footer */
+                /* 3. Main als flexible Lücke definieren */
                 main {
+                    /* falls du margin-top wegen fixed header brauchst, behalte es */
+                    /* margin-top: 80px; */
                     flex: 1;
+                }
+
+                /* 4. Footer unten anordnen */
+                footer {
+                    /* kein zusätzliches CSS nötig, bleibt im Fluss */
                 }
             }
         }
