--- a/contact.html
+++ b/contact.html
@@ -347,8 +347,8 @@
             }
 
             @media (min-width: 768px) {
-                main {
-                    margin-bottom: 200px;
+                footer {
+                    margin-top: 200px;
                 }
             }
             
