--- a/contact.html
+++ b/contact.html
@@ -346,6 +346,12 @@
                 font-size: 0.9rem;
             }
         }
+
+        @media (min-width: 768px) {
+            footer {
+                margin-top: 200px;
+            }
+        }
             
     </style>
 </head>
