--- a/contact.html
+++ b/contact.html
@@ -180,11 +180,20 @@
             font-size: clamp(1rem, 2vw, 1.2rem);
             font-family: 'MainFont';
             margin-bottom: 40px;
-            opacity: 0;
             animation: fadeInUp 1s ease 0.3s forwards;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+        }
+
+        #contactForm {
+            padding: 0 20px;
+        }
+
+        @media (min-width: 768px) {
+            #contactForm {
+                padding: 0 100px;
+            }
         }
 
         label {
