--- a/contact.html
+++ b/contact.html
@@ -163,8 +163,8 @@
             background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
         }
 
-        .hero h1 {
-            font-size: clamp(2rem, 4vw, 3.5rem);
+        .hero h2 {
+            font-size: 2vw;
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             animation: fadeInUp 1s ease forwards;
@@ -389,7 +389,7 @@
     <main>
         <section class="hero" id="home">
             <div class="container">
-                <h1>Get in touch with us</h1>
+                <h2>Get in touch with us</h2>
             </div>
         </section>
 
