--- a/contact.html
+++ b/contact.html
@@ -210,11 +210,13 @@
             border: 1px solid #999;
             border-radius: 4px;
             font-size: 1rem;
+            background-color: #222;
         }
 
         textarea {
             resize: vertical;
             min-height: 150px;
+            background-color: #222;
         }
 
         .counter {
