--- a/index.html
+++ b/index.html
@@ -476,6 +476,12 @@
             color: white;
         }
 
+        @media (max-width: 768px) {
+            .cart-button2 {
+                font-size: 20px;
+            }
+        }
+
         .cart-button2:hover {
             transform: translateY(-2px);
             box-shadow: 0 8px 25px #004033;
