--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
             color: white;
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 768px) {
             .cart-button2 {
-                font-size: 10px;
+                font-size: 20px;
             }
         }
 
