--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,8 @@
         }
 
         .add-to-cart-modal:hover {
-            background: linear-gradient(45deg, #555, #777);
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 25px #004033;
         }
 
         .product-specs {
@@ -1612,13 +1611,13 @@
 
                 <!-- Buttons -->
                 <div class="cart-button-container">
-                    <button id="cartButton1" class="cart-button cart-button1">Zur Kasse</button>
+                    <button id="cartButton1" class="cart-button cart-button1">Checkout</button>
                     <button 
                         id="cartButton2" 
                         class="cart-button cart-button2 hidden"
                         onclick="window.location.href='requestaccess.html';"
                         >
-                        Spezialbestellung
+                        Request access
                     </button>
                 </div>
             </div>
