--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
         }
 
         .btn-added {
-            background-color: #4caf50; /* Beispiel: sattes Grün */
+            background-color: #4caf50 !important; /* Beispiel: sattes Grün */
             color: white;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
