--- a/about.html
+++ b/about.html
@@ -547,8 +547,8 @@
     <main>
         <section class="hero" id="home">
             <div class="container">
-                <h1>Breaking the illusion,<br>building your truth!</h1>
-                <p>About us</p>
+                <h1>About us</h1>
+                <p>Breaking the illusion,<br>building your truth!</p>
             </div>
         </section>
 
@@ -585,16 +585,10 @@
                         <div class="team-bio">Technologieexperte und Problemlöser. Max verwandelt komplexe Herausforderungen in elegante, skalierbare Lösungen.</div>
                     </div>
                     <div class="team-card">
-                        <div class="team-avatar">SB</div>
-                        <div class="team-name">Sarah Bauer</div>
-                        <div class="team-role">Head of Design</div>
-                        <div class="team-bio">Kreative Designerin mit einem Auge für Details. Sarah erschafft Benutzeroberflächen, die sowohl schön als auch intuitiv sind.</div>
-                    </div>
-                    <div class="team-card">
-                        <div class="team-avatar">TH</div>
-                        <div class="team-name">Tom Hansen</div>
-                        <div class="team-role">Lead Developer</div>
-                        <div class="team-bio">Coding-Ninja und Mentor. Tom bringt die wildesten Ideen zum Leben und teilt sein Wissen gerne mit dem gesamten Team.</div>
+                        <div class="team-avatar">T</div>
+                        <div class="team-name">Team</div>
+                        <div class="team-role">Driven by experts</div>
+                        <div class="team-bio">We are honored to work alongside such an outstanding team of analysts, designers, developers, and marketing professionals.</div>
                     </div>
                 </div>
             </div>
