--- a/about.html
+++ b/about.html
@@ -579,13 +579,13 @@
                         <div class="team-bio">Visionäre Führungskraft mit 15 Jahren Erfahrung in der Tech-Branche. Anna treibt Innovation voran und inspiriert unser Team täglich.</div>
                     </div>
                     <div class="team-card">
-                        <div class="team-avatar">MK</div>
+                        <div class="team-pic"> <img src="images/Team/CTO.png"></div>
                         <div class="team-name">Max Kellner</div>
                         <div class="team-role">CTO</div>
                         <div class="team-bio">Technologieexperte und Problemlöser. Max verwandelt komplexe Herausforderungen in elegante, skalierbare Lösungen.</div>
                     </div>
                     <div class="team-card">
-                        <div class="team-avatar">T</div>
+                        <div class="team-pic"> <img src="images/Team/Team.png"></div>
                         <div class="team-name">Team</div>
                         <div class="team-role">Driven by experts</div>
                         <div class="team-bio">We are honored to work alongside such an outstanding team of analysts, designers, developers, and marketing professionals.</div>
