--- a/about.html
+++ b/about.html
@@ -574,15 +574,15 @@
                 <div class="team-grid">
                     <div class="team-card">
                         <div class="team-pic"> <img src="images/Team/CEO.png"></div>
-                        <div class="team-name">macrosoft</div>
+                        <div class="team-name">Dean Carver</div>
                         <div class="team-role">CEO & Founder</div>
-                        <div class="team-bio">Visionäre Führungskraft mit 15 Jahren Erfahrung in der Tech-Branche. Anna treibt Innovation voran und inspiriert unser Team täglich.</div>
+                        <div class="team-bio">Dean is a seasoned professional in the trading industry, combining years of experience with a forward-thinking approach. He brings structure and fresh perspective to the team.</div>
                     </div>
                     <div class="team-card">
                         <div class="team-pic"> <img src="images/Team/CTO.png"></div>
                         <div class="team-name">Max Kellner</div>
-                        <div class="team-role">CTO</div>
-                        <div class="team-bio">Technologieexperte und Problemlöser. Max verwandelt komplexe Herausforderungen in elegante, skalierbare Lösungen.</div>
+                        <div class="team-role">Head Analyst</div>
+                        <div class="team-bio">Mark brings years of analytical experience to the table. As Head Analyst, he ensures our strategies are data-driven, focused, and grounded in real whale behavior.</div>
                     </div>
                     <div class="team-card">
                         <div class="team-pic"> <img src="images/Team/Team.png"></div>
