--- a/about.html
+++ b/about.html
@@ -600,17 +600,17 @@
                     <div class="value-card">
                         <span class="value-icon">🎯</span>
                         <div class="value-title">Innovation</div>
-                        <div class="value-description">Wir denken über den Tellerrand hinaus und entwickeln Lösungen, die Branchen verändern und neue Maßstäbe setzen.</div>
+                        <div class="value-description">We think outside the box and develop solutions that transform industries and set new standards.</div>
                     </div>
                     <div class="value-card">
                         <span class="value-icon">🤝</span>
-                        <div class="value-title">Zusammenarbeit</div>
-                        <div class="value-description">Erfolg entsteht durch Teamwork. Wir arbeiten eng mit unseren Kunden zusammen und schaffen gemeinsam Großartiges.</div>
+                        <div class="value-title">Collaboration</div>
+                        <div class="value-description">Success is built on teamwork. We work closely with our clients to create something exceptional together.</div>
                     </div>
                     <div class="value-card">
                         <span class="value-icon">⚡</span>
-                        <div class="value-title">Exzellenz</div>
-                        <div class="value-description">Qualität ist nicht verhandelbar. Jedes Projekt wird mit höchster Präzision und Leidenschaft umgesetzt.</div>
+                        <div class="value-title">Excellence</div>
+                        <div class="value-description">Quality is non-negotiable. Every project is executed with utmost precision and dedication.</div>
                     </div>
                 </div>
             </div>
