--- a/about.html
+++ b/about.html
@@ -598,17 +598,17 @@
             <div class="container">
                 <div class="values-grid">
                     <div class="value-card">
-                        <span class="value-icon">🎯</span>
+                        <div class="value-icon"> <img src="images/Icons/Innovation.png"></div>
                         <div class="value-title">Innovation</div>
                         <div class="value-description">We think outside the box and develop solutions that transform industries and set new standards.</div>
                     </div>
                     <div class="value-card">
-                        <span class="value-icon">🤝</span>
+                        <div class="value-icon"> <img src="images/Icons/Collaboration.png"></div>
                         <div class="value-title">Collaboration</div>
                         <div class="value-description">Success is built on teamwork. We work closely with our clients to create something exceptional together.</div>
                     </div>
                     <div class="value-card">
-                        <span class="value-icon">⚡</span>
+                        <div class="value-icon"> <img src="images/Icons/Excellence.png"></div>
                         <div class="value-title">Excellence</div>
                         <div class="value-description">Quality is non-negotiable. Every project is executed with utmost precision and dedication.</div>
                     </div>
