--- a/about.html
+++ b/about.html
@@ -484,9 +484,10 @@
         }
 
         .value-icon {
-            font-size: 4rem;
             margin-bottom: 20px;
             display: block;
+            max-width: 2vw;
+            max-heigth: auto;
         }
 
         .value-title {
