--- a/about.html
+++ b/about.html
@@ -609,7 +609,7 @@
                         <div class="value-description">Success is built on teamwork. We work closely with our clients to create something exceptional together.</div>
                     </div>
                     <div class="value-card">
-                        <div class="value-icon"> <img src="images/Icons/Collaboration.png"></div>
+                        <div class="value-icon"> <img src="images/Icons/Excellence.png"></div>
                         <div class="value-title">Excellence</div>
                         <div class="value-description">Quality is non-negotiable. Every project is executed with utmost precision and dedication.</div>
                     </div>
