--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
             margin-bottom: 20px;
             display: block;
             max-width: 2vw;
-            max-heigth: auto;
+            max-heigth: 2vw;
         }
 
         .value-title {
