--- a/about.html
+++ b/about.html
@@ -483,11 +483,11 @@
             transform: scale(1.05);
         }
 
-        .value-icon {
+        .value-icon img {
             margin-bottom: 20px;
             display: block;
             max-width: 2vw;
-            max-heigth: 2vw;
+            max-heigth: auto;
         }
 
         .value-title {
