--- a/about.html
+++ b/about.html
@@ -483,10 +483,17 @@
             transform: scale(1.05);
         }
 
+        .value-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
         .value-icon img {
             margin-bottom: 20px;
             display: block;
-            max-width: 2vw;
+            max-width: 3vw;
             max-heigth: auto;
         }
 
