--- a/about.html
+++ b/about.html
@@ -509,6 +509,12 @@
             line-height: 1.6;
         }
 
+        @media (max-width: 768px) {
+            .value-icon img {
+                max-width: 7vw;
+            }
+        }
+
         @keyframes fadeInUp {
             from {
                 opacity: 0;
