--- a/about.html
+++ b/about.html
@@ -493,7 +493,7 @@
         .value-icon img {
             margin-bottom: 20px;
             display: block;
-            max-width: 3vw;
+            max-width: 5%;
             max-heigth: auto;
         }
 
@@ -511,7 +511,7 @@
 
         @media (max-width: 768px) {
             .value-icon img {
-                max-width: 17vw;
+                max-width: 20vw;
             }
         }
 
