--- a/index.html
+++ b/index.html
@@ -699,6 +699,12 @@
             max-width: 600px; /* oder mehr, je nach Layout */
             margin: 0 auto;
         }
+
+        @media (min-width: 769px) {
+            .preview-image {
+                max-width: 1000;
+            }
+        }
         
         .preview-image picture img {
             width: 100%;
