--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
         @media (min-width: 769px) {
             .preview-image {
-                max-width: 1000;
+                max-width: 90vw;
             }
         }
         
