--- a/index.html
+++ b/index.html
@@ -714,6 +714,7 @@
             transform-style: preserve-3d;
             will-change: transform;
             transform-origin: center center;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
         }
 
         /* Products Section */
